fix: add profile name and status text-overflow ellypsis

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,10 +3,10 @@
   align-self: center;
   color: #fff;
   display: grid;
-  grid-template-columns: minmax(min-content, max-content) 24px;
+  grid-template-columns: 1fr 24px;
   grid-template-areas: 
     "name button"
-    "status status";
+    "status .";
   column-gap: 18px;
   row-gap: 16px;
   margin-right: 50px;
