--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,7 +5,9 @@
   font-size: 42px;
   line-height: 1.14;
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 1279px) {
